changes related to packaging

--- a/package-res/resources/whLabel.html
+++ b/package-res/resources/whLabel.html
@@ -4,7 +4,7 @@
 </html>
 <body>
 <script type="text/javascript" src="scripts/common.js"></script>
-<script type="text/javascript" language="javascript" src="label/label.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="label/whlabel.nocache.js"></script>
 <link rel="stylesheet" type="text/css" media="all"   href="styles/common.css" />
 <link rel="stylesheet" type="text/css" media="all"   href="styles/content.css" />
 <link rel="stylesheet" type="text/css" media="all" href="styles/selectArea.css" />
