(DDB-41) and (DDB-40): discussed functionality implemented, support for custom url added.

--- a/bi/package-res/resources/adminui.html
+++ b/bi/package-res/resources/adminui.html
@@ -1,5 +1,5 @@
 <html>
-<iframe src="/adminui/SQLAdmin.html" width="100%" height="95%">
-  <p>Turn on iframe support to view this.</p>
-</iframe>
+  <iframe src="${Luciddb.adminui.URL}" width="100%" height="95%">
+    <p>Turn on iframe support to view this.</p>
+  </iframe>
 </html>
